--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.5",
     "bootstrap": "^5.3.3",
+    "cookie": "^0.6.0",
     "express": "^4.19.2",
     "json-server": "^1.0.0-alpha.23",
+    "jwt-decode": "^4.0.0",
+    "ofetch": "^1.3.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0-beta.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
+    "swr": "^2.2.5",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
